--- a/Configuration_Files/PoliMi3i_thesis.cls
+++ b/Configuration_Files/PoliMi3i_thesis.cls
@@ -126,7 +126,7 @@
 			\\
 			\begin{minipage}{0.85\textwidth}
 			\normalsize{
-			Student ID: {\ID}
+			Student IDs: {\ID}
 			\\
 			Advisor: {\advisor}
 			
